fix: column wize on tablette

--- a/src/modules/Common/components/Column.module.css
+++ b/src/modules/Common/components/Column.module.css
@@ -42,7 +42,17 @@
 
 @media (--tabletSmall) {
   .column {
-    width: 100%;
+    &.column__25 {
+      width: 100%;
+    }
+
+    &.column__50 {
+      width: 100%;
+    }
+
+    &.column__75 {
+      width: 100%;
+    }
 
     &:not(:first-child) {
       margin-left: 0;
